<resources>
    <string name="app_name">Phone Detector</string>
    <string name="menu_option_is_show_spam">Show spam</string>
    <string name="menu_option_is_not_show_spam">Show not spam</string>
    <string name="menu_option_setting">Settings</string>
    <string name="menu_option_statistics">Statistics</string>
    <string name="info_user_not_found">Undefined User</string>
    <string name="button_block_number">Block number</string>
    <string name="button_add_contact">Add to Contacts</string>
    <string name="title_activity_settings">Settings</string>

    <string name="messages_header">General</string>
    <string name="activate_phone_detection">Enable phone detection</string>
    <string name="activate_phone_detection_description">Access to the call log is required</string>

    <string name="search_in_contacts">Disable search in Contacts</string>
    <string name="search_in_contacts_description">Do not detect numbers from the contact list. Access to the contact list is required</string>
    <string name="detection_delay">Detection timeout</string>
    <string name="detection_delay_description">Set maximum search timeout for the incoming call (in seconds)</string>
    <string name="notification_header">Notifications</string>
    <string name="create_notification_description">Send block notification after a spam call</string>
    <string name="create_notification">\"Block\" notification</string>
    <string name="time_notification_description">Set \"block\" notification timeout (in minutes)</string>
    <string name="time_notification">Timeout</string>
    <string name="drop_table_description">Delete all log information</string>
    <string name="drop_table">Clear log</string>
    <string name="always_network_description">Use only network data, ignore cached database</string>
    <string name="always_network">Always use network</string>
    <string name="show_empty_user_description">Show information popup when incoming number is not detected</string>
    <string name="show_empty_user">Show empty phone popup</string>
    <string name="notification_instead_overlay_description">Show notification instead of popup during the incoming call</string>
    <string name="notification_instead_overlay">Call notification</string>
    <string name="no_cache_empty_phones_description">Do not save unrecognized numbers in the database</string>
    <string name="no_cache_empty_phones">Do not save unknown numbers</string>
    <string name="search_title">Search Settings</string>
    <string name="use_getcontact_description">Use GetContact API for search</string>
    <string name="use_getcontact">GetContact</string>
    <string name="use_neberitrubku_description">Use neberitrubku.ru for search</string>
    <string name="use_neberitrubku">Neberitrubku.ru</string>
    <string name="use_saverudata_info_description">Use saverudata for search</string>
    <string name="use_saverudata_info">saverudata</string>
    <string name="make_call_on_swipe_text">Access to the call permission is required</string>
    <string name="make_call_on_swipe">Call on left swipe</string>
    <string name="theme_header">Theme</string>
    <string name="dark_mode_description">Turn on dark mode</string>
    <string name="dark_mode">Dark mode</string>

</resources>
